// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tablesample.sql > line 1 1`] = `
[
  "CREATE TABLE test_tablesample (id int, name text) WITH (fillfactor=10)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 10,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 56,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "test_tablesample",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 34,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "name",
                  "is_local": true,
                  "location": 39,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 5 1`] = `
[
  "  SELECT i, repeat(i::text, 200) FROM generate_series(0, 9) s(i)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "s",
                    "colnames": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                    ],
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {},
                                    "location": 54,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 9,
                                    },
                                    "location": 57,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 38,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 12,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "i",
                                    },
                                  },
                                ],
                                "location": 19,
                              },
                            },
                            "location": 20,
                            "typeName": {
                              "location": 22,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 200,
                            },
                            "location": 28,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "repeat",
                          },
                        },
                      ],
                      "location": 12,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 7 1`] = `
[
  "SELECT t.id FROM test_tablesample AS t TABLESAMPLE SYSTEM (50) REPEATABLE (0)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeTableSample": {
                  "args": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 50,
                        },
                        "location": 59,
                      },
                    },
                  ],
                  "location": 51,
                  "method": [
                    {
                      "String": {
                        "sval": "system",
                      },
                    },
                  ],
                  "relation": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t",
                      },
                      "inh": true,
                      "location": 17,
                      "relname": "test_tablesample",
                      "relpersistence": "p",
                    },
                  },
                  "repeatable": {
                    "A_Const": {
                      "ival": {},
                      "location": 75,
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "t",
                          },
                        },
                        {
                          "String": {
                            "sval": "id",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 14 1`] = `
[
  "SELECT count(*) FROM test_tablesample TABLESAMPLE SYSTEM (100)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeTableSample": {
                  "args": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 100,
                        },
                        "location": 58,
                      },
                    },
                  ],
                  "location": 50,
                  "method": [
                    {
                      "String": {
                        "sval": "system",
                      },
                    },
                  ],
                  "relation": {
                    "RangeVar": {
                      "inh": true,
                      "location": 21,
                      "relname": "test_tablesample",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 18 1`] = `
[
  "CREATE VIEW test_tablesample_v1 AS
  SELECT id FROM test_tablesample TABLESAMPLE SYSTEM (10*2) REPEATABLE (2)",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeTableSample": {
                      "args": [
                        {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 10,
                                },
                                "location": 89,
                              },
                            },
                            "location": 91,
                            "name": [
                              {
                                "String": {
                                  "sval": "*",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 2,
                                },
                                "location": 92,
                              },
                            },
                          },
                        },
                      ],
                      "location": 81,
                      "method": [
                        {
                          "String": {
                            "sval": "system",
                          },
                        },
                      ],
                      "relation": {
                        "RangeVar": {
                          "inh": true,
                          "location": 52,
                          "relname": "test_tablesample",
                          "relpersistence": "p",
                        },
                      },
                      "repeatable": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 107,
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 44,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "id",
                              },
                            },
                          ],
                          "location": 44,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "test_tablesample_v1",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 21 1`] = `
[
  "  SELECT id FROM test_tablesample TABLESAMPLE SYSTEM (99)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeTableSample": {
                  "args": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 99,
                        },
                        "location": 54,
                      },
                    },
                  ],
                  "location": 46,
                  "method": [
                    {
                      "String": {
                        "sval": "system",
                      },
                    },
                  ],
                  "relation": {
                    "RangeVar": {
                      "inh": true,
                      "location": 17,
                      "relname": "test_tablesample",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "id",
                          },
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 30 1`] = `
[
  "FETCH FIRST FROM tablesample_cur",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_ABSOLUTE",
            "howMany": 1,
            "portalname": "tablesample_cur",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 36 1`] = `
[
  "FETCH NEXT FROM tablesample_cur",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 1,
            "portalname": "tablesample_cur",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 47 1`] = `
[
  "CLOSE tablesample_cur",
  {
    "stmts": [
      {
        "stmt": {
          "ClosePortalStmt": {
            "portalname": "tablesample_cur",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 50 1`] = `
[
  "EXPLAIN (COSTS OFF)
  SELECT id FROM test_tablesample TABLESAMPLE SYSTEM (50) REPEATABLE (2)",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeTableSample": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 50,
                            },
                            "location": 74,
                          },
                        },
                      ],
                      "location": 66,
                      "method": [
                        {
                          "String": {
                            "sval": "system",
                          },
                        },
                      ],
                      "relation": {
                        "RangeVar": {
                          "inh": true,
                          "location": 37,
                          "relname": "test_tablesample",
                          "relpersistence": "p",
                        },
                      },
                      "repeatable": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 90,
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 29,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "id",
                              },
                            },
                          ],
                          "location": 29,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 53 1`] = `
[
  "  SELECT * FROM test_tablesample_v1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 16,
                  "relname": "test_tablesample_v1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 56 1`] = `
[
  "explain (costs off)
  select count(*) from person tablesample bernoulli (100)",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeTableSample": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 100,
                            },
                            "location": 73,
                          },
                        },
                      ],
                      "location": 62,
                      "method": [
                        {
                          "String": {
                            "sval": "bernoulli",
                          },
                        },
                      ],
                      "relation": {
                        "RangeVar": {
                          "inh": true,
                          "location": 43,
                          "relname": "person",
                          "relpersistence": "p",
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 29,
                      "val": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 29,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 62 1`] = `
[
  "SELECT count(*) FROM test_tablesample TABLESAMPLE bernoulli (('1'::text < '0'::text)::int)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeTableSample": {
                  "args": [
                    {
                      "TypeCast": {
                        "arg": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 62,
                                    "sval": {
                                      "sval": "1",
                                    },
                                  },
                                },
                                "location": 65,
                                "typeName": {
                                  "location": 67,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "text",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                            "location": 72,
                            "name": [
                              {
                                "String": {
                                  "sval": "<",
                                },
                              },
                            ],
                            "rexpr": {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 74,
                                    "sval": {
                                      "sval": "0",
                                    },
                                  },
                                },
                                "location": 77,
                                "typeName": {
                                  "location": 79,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "text",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                          },
                        },
                        "location": 84,
                        "typeName": {
                          "location": 86,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  ],
                  "location": 50,
                  "method": [
                    {
                      "String": {
                        "sval": "bernoulli",
                      },
                    },
                  ],
                  "relation": {
                    "RangeVar": {
                      "inh": true,
                      "location": 21,
                      "relname": "test_tablesample",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 65 1`] = `
[
  "select * from
  (values (0),(100)) v(pct),
  lateral (select count(*) from tenk1 tablesample bernoulli (pct)) ss",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "v",
                    "colnames": [
                      {
                        "String": {
                          "sval": "pct",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {},
                                  "location": 25,
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 100,
                                  },
                                  "location": 29,
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "ss",
                  },
                  "lateral": true,
                  "subquery": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeTableSample": {
                            "args": [
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "pct",
                                      },
                                    },
                                  ],
                                  "location": 104,
                                },
                              },
                            ],
                            "location": 93,
                            "method": [
                              {
                                "String": {
                                  "sval": "bernoulli",
                                },
                              },
                            ],
                            "relation": {
                              "RangeVar": {
                                "inh": true,
                                "location": 75,
                                "relname": "tenk1",
                                "relpersistence": "p",
                              },
                            },
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 61,
                            "val": {
                              "FuncCall": {
                                "agg_star": true,
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "count",
                                    },
                                  },
                                ],
                                "location": 61,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 72 1`] = `
[
  "select pct, count(unique1) from
  (values (0),(100)) v(pct),
  lateral (select * from tenk1 tablesample bernoulli (pct)) ss
  group by pct",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "v",
                    "colnames": [
                      {
                        "String": {
                          "sval": "pct",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {},
                                  "location": 43,
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 100,
                                  },
                                  "location": 47,
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "ss",
                  },
                  "lateral": true,
                  "subquery": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeTableSample": {
                            "args": [
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "pct",
                                      },
                                    },
                                  ],
                                  "location": 115,
                                },
                              },
                            ],
                            "location": 104,
                            "method": [
                              {
                                "String": {
                                  "sval": "bernoulli",
                                },
                              },
                            ],
                            "relation": {
                              "RangeVar": {
                                "inh": true,
                                "location": 86,
                                "relname": "tenk1",
                                "relpersistence": "p",
                              },
                            },
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 79,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "A_Star": {},
                                  },
                                ],
                                "location": 79,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "groupClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "pct",
                      },
                    },
                  ],
                  "location": 135,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "pct",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 12,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "unique1",
                                },
                              },
                            ],
                            "location": 18,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 12,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 86 1`] = `
[
  "SELECT id FROM test_tablesample TABLESAMPLE FOOBAR (1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeTableSample": {
                  "args": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 52,
                      },
                    },
                  ],
                  "location": 44,
                  "method": [
                    {
                      "String": {
                        "sval": "foobar",
                      },
                    },
                  ],
                  "relation": {
                    "RangeVar": {
                      "inh": true,
                      "location": 15,
                      "relname": "test_tablesample",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "id",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 91 1`] = `
[
  "SELECT id FROM test_tablesample TABLESAMPLE BERNOULLI (-1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeTableSample": {
                  "args": [
                    {
                      "A_Const": {
                        "ival": {},
                        "location": 55,
                      },
                    },
                  ],
                  "location": 44,
                  "method": [
                    {
                      "String": {
                        "sval": "bernoulli",
                      },
                    },
                  ],
                  "relation": {
                    "RangeVar": {
                      "inh": true,
                      "location": 15,
                      "relname": "test_tablesample",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "id",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 96 1`] = `
[
  "SELECT id FROM test_tablesample_v1 TABLESAMPLE BERNOULLI (1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeTableSample": {
                  "args": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 58,
                      },
                    },
                  ],
                  "location": 47,
                  "method": [
                    {
                      "String": {
                        "sval": "bernoulli",
                      },
                    },
                  ],
                  "relation": {
                    "RangeVar": {
                      "inh": true,
                      "location": 15,
                      "relname": "test_tablesample_v1",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "id",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 99 1`] = `
[
  "WITH query_select AS (SELECT * FROM test_tablesample)
SELECT * FROM query_select TABLESAMPLE BERNOULLI (5.5) REPEATABLE (1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeTableSample": {
                  "args": [
                    {
                      "A_Const": {
                        "fval": {
                          "fval": "5.5",
                        },
                        "location": 104,
                      },
                    },
                  ],
                  "location": 93,
                  "method": [
                    {
                      "String": {
                        "sval": "bernoulli",
                      },
                    },
                  ],
                  "relation": {
                    "RangeVar": {
                      "inh": true,
                      "location": 68,
                      "relname": "query_select",
                      "relpersistence": "p",
                    },
                  },
                  "repeatable": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 121,
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 61,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 61,
                    },
                  },
                },
              },
            ],
            "withClause": {
              "ctes": [
                {
                  "CommonTableExpr": {
                    "ctematerialized": "CTEMaterializeDefault",
                    "ctename": "query_select",
                    "ctequery": {
                      "SelectStmt": {
                        "fromClause": [
                          {
                            "RangeVar": {
                              "inh": true,
                              "location": 36,
                              "relname": "test_tablesample",
                              "relpersistence": "p",
                            },
                          },
                        ],
                        "limitOption": "LIMIT_OPTION_DEFAULT",
                        "op": "SETOP_NONE",
                        "targetList": [
                          {
                            "ResTarget": {
                              "location": 29,
                              "val": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "A_Star": {},
                                    },
                                  ],
                                  "location": 29,
                                },
                              },
                            },
                          },
                        ],
                      },
                    },
                    "location": 5,
                  },
                },
              ],
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 105 1`] = `
[
  "create table parted_sample (a int) partition by list (a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 35,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 54,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_LIST",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "parted_sample",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 28,
                  "typeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tablesample.sql > line 109 1`] = `
[
  "  select * from parted_sample tablesample bernoulli (100)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeTableSample": {
                  "args": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 100,
                        },
                        "location": 53,
                      },
                    },
                  ],
                  "location": 42,
                  "method": [
                    {
                      "String": {
                        "sval": "bernoulli",
                      },
                    },
                  ],
                  "relation": {
                    "RangeVar": {
                      "inh": true,
                      "location": 16,
                      "relname": "parted_sample",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
